--- a/test/fixtures/shows.yml
+++ b/test/fixtures/shows.yml
@@ -7,6 +7,7 @@ one:
   capacity: 1
   price: 1
   image: MyString
+  date: 2014-10-12
 
 two:
   name: MyString
@@ -15,3 +16,4 @@ two:
   capacity: 1
   price: 1
   image: MyString
+  date: 2014-10-12
